<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="32dp"
    android:background="@drawable/select_day_shape">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_day"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <Spinner
        android:id="@+id/spinner_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/week_days"
        android:backgroundTint="@color/main_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_meal_type"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroup_mealType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"
            android:layout_marginHorizontal="8dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch"
            android:layout_marginHorizontal="8dp"/>

        <RadioButton
            android:id="@+id/radio_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinner"
            android:layout_marginHorizontal="8dp"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_add_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_meal_to_plan"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/main_color"/>
</LinearLayout>
