<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login_background"
    tools:context=".ui.login.view.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="90dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textColor="@color/white2"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_your_email"
            android:padding="12dp"
            android:background="@drawable/edittext_shape"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/white2"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_your_password"
            android:padding="12dp"
            android:background="@drawable/edittext_shape"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:drawableEnd="@drawable/baseline_visibility_off_24"
            android:drawablePadding="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginVertical="12dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/white2"
                android:textSize="16sp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_loginAsGuest"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/main_color"
            android:text="@string/login_as_guest"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginEnd="20dp"
            />
        <Button
            android:id="@+id/btn_loginAsUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/main_color"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_CreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/white2"
            android:textSize="22sp"
            android:layout_marginStart="4dp"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_log_in_with"
        android:textColor="@color/white2"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/btn_google_login"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/img_google"
            />

    </LinearLayout>

    </LinearLayout>


</FrameLayout>